--- a/CSS/style.css
+++ b/CSS/style.css
@@ -51,7 +51,8 @@ body {
     font-size: 500%;
     color: white;}
 
-
+/*
+ 
 nav{ 
         position: relative;
         background-color: white;}
@@ -62,26 +63,85 @@ nav li a:hover{
 }
   
     
-ul{ display: flex;
-    flex-direction: row;
+ul{ display: block;
     list-style: none;
     font-size: 0;}
     
 li{
-    display: inline-block;
+    display: block;
     width: 20%;
     position: relative;
     text-align:center;
     font-size: 14px;}
 
 ul ul{
-    position: absolute;
+    position: relative;
     display: none;}
     
 li:hover > a{
     display: block;}
 
+*/
 
+#menu ul {
+    list-style:none;
+    margin:0;
+    padding:0;
+}
+
+#menu ul li {
+    background-color:gray;
+}
+
+#menu ul a {
+    display:block;
+    color:#fff;
+    text-decoration:none;
+    font-weight:400;
+    font-size:15px;
+    padding:10px;
+    font-family: 'Montserrat', sans-serif;
+    text-transform:uppercase;
+    letter-spacing:1px;
+}
+
+#menu ul li {
+    position:relative;
+    float:left;
+    margin:0;
+    padding:0;
+}
+
+#menu ul li:hover {
+    background: rgb(140, 136, 136);
+}
+
+#menu ul ul {
+    display:none;
+    position:absolute;
+    top:100%;
+    left:0;
+    background:#eee;
+    padding:0;
+}
+
+#menu ul ul li {
+    float:none;
+    width:150px
+}
+
+#menu ul ul a {
+    line-height:120%;
+    padding:10px 15px;
+}
+
+#menu ul li:hover > ul {
+    display:block;
+}
+
+#menu {
+    display: inline-block;
+}
 
 .cuerpoPadre{ 
     display: grid;
